syntax="proto3";
//option cc_generic_services = true;

package ccraft.protocal;

message RaftState {
    uint32 currentTerm = 1;
    uint32 votedFor    = 2;
}
